eagle_test/error/assign_operator_error.eagle
var a = a;
// expected: [RuntimeError at line 1] Undefined variable 'a'
